Fix chrome layout issues

--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ h1 {
   margin: 0;
 }
 
+@media (max-width: 400px) {
+  .sub-announce {
+    font-size: 42px;
+    position: relative;
+    top: -1.5rem;
+  }
+}
+
 h2 {
   font-size: 36px;
   font-weight: normal;
@@ -81,7 +89,7 @@ a:hover {
   text-decoration: underline;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1024px) {
   html,
   body {
     height: 100%;
@@ -104,7 +112,8 @@ a:hover {
   }
 
   .portrait img {
-    max-width: none;
+    width: auto;
+    max-width: calc(100vw - 700px);
     max-height: 70vh;
   }
 
